--- a/.github/workflows/adm2_scrape.yaml
+++ b/.github/workflows/adm2_scrape.yaml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: "master"
-      - uses: r-lib/actions/setup-pandoc@master
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
           use-public-rspm: true
